[project]
name = "visionify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "opencv-python-headless>=4.10.0.84",
    "opencv-python>=4.10.0.84",
    "python-multipart>=0.0.18",
    "ultralytics>=8.3.39",
    "uvicorn>=0.32.1",
    "numpy>=1.26.4",
]
